<?xml version="1.0"?>
<package format="2">
  <name>ibeo_lux</name>
  <version>2.0.0</version>
  <description>ROS driver for IBEO LUX</description>
  <license>LGPLv2.1</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="jkale@autonomoustuff.com">Joe Kale</author>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <url type="bugtracker">https://bitbucket.org/autonomoustuff/ros_ibeo_lux/issues</url>
  <url type="repository">https://bitbucket.org/autonomoustuff/ros_ibeo_lux</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>network_interface</depend>
  <depend>ibeo_msgs</depend>
</package>
